--- a/index.html
+++ b/index.html
@@ -6,14 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- TODO ======================= FAVICON ======================= -->
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+
+    <!-- TODO ======================= REMIX ICONS ======================= -->
+
+    <!-- TODO ======================= SWIPER CSS ======================= -->
+
+
     <!-- ! Swiper dari website https://swiperjs.com/get-started#use-swiper-from-cdn -->
     <!-- TODO ======================= CSS ======================= -->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>MiKe-Electric Vehicle</title>
+    <title>MiKe-ElectricVehicle</title>
 </head>
 
 <body>
+    <!-- TODO ======================= HEADER ======================= -->
+    <header class="header" id="header">
+
+    </header>
+
+
+    <!-- TODO ======================= MAIN ======================= -->
+    <main class="main">
+
+    </main>
+
+    <!-- TODO ======================= SCROLL UP ======================= -->
+
+    <!-- TODO ======================= SCROLL REVEAL ======================= -->
+
+    <!-- TODO ======================= SWIPER JS ======================= -->
+
+    <!-- TODO ======================= MIXITUP JS ======================= -->
 
     <!-- TODO ======================= MAIN JS ======================= -->
     <script src="assets/js/main.js"></script>
