--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- TODO ======================= REMIX ICONS ======================= -->
+    <!-- ! Remix Icons dari website https://github.com/Remix-Design/remixicon#cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <!-- TODO ======================= SWIPER CSS ======================= -->
-
-
     <!-- ! Swiper dari website https://swiperjs.com/get-started#use-swiper-from-cdn -->
+
     <!-- TODO ======================= CSS ======================= -->
     <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -30,16 +31,57 @@
 
     <!-- TODO ======================= MAIN ======================= -->
     <main class="main">
+        <!-- TODO ==================== HOME ==================== -->
+        <section class="home section" id="home">
 
+        </section>
+
+        <!-- TODO ==================== ABOUT ==================== -->
+        <section class="about section" id="about">
+
+        </section>
+
+        <!-- TODO ==================== POPULAR ==================== -->
+        <section class="popular section" id="popular">
+
+        </section>
+
+        <!-- TODO ==================== FEATURES ==================== -->
+        <section class="features section">
+
+        </section>
+
+        <!-- TODO ==================== FEATURED ==================== -->
+        <section class="featured section" id="featured">
+
+        </section>
+
+        <!-- TODO ==================== OFFER ==================== -->
+        <section class="offer section">
+
+        </section>
+
+        <!-- TODO ==================== LOGOS ==================== -->
+        <section class="logos section">
+
+        </section>
     </main>
+
+    <!-- TODO ======================= FOOTER ======================= -->
+    <footer class="footer section">
+
+    </footer>
 
     <!-- TODO ======================= SCROLL UP ======================= -->
 
     <!-- TODO ======================= SCROLL REVEAL ======================= -->
+    <script src=""></script>
 
     <!-- TODO ======================= SWIPER JS ======================= -->
+    <script src=""></script>
 
     <!-- TODO ======================= MIXITUP JS ======================= -->
+    <script src=""></script>
 
     <!-- TODO ======================= MAIN JS ======================= -->
     <script src="assets/js/main.js"></script>
