--- a/index.html
+++ b/index.html
@@ -25,9 +25,41 @@
 <body>
     <!-- TODO ======================= HEADER ======================= -->
     <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav_logo">
+                <!-- ! Icon "setir mobil" dari website https://remixicon.com/, lalu search "steering" -->
+                <i class="ri-steering-line"></i>
+                EVolution.
+            </a>
 
+            <div class="nav_menu" id="nav-menu">
+                <ul class="nav_list">
+                    <li class="nav_item">
+                        <a href="#home" class="nav_link">Home</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#about" class="nav_link">About</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#popular" class="nav_link">Popular</a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#featured" class="nav_link">Featured</a>
+                    </li>
+                </ul>
+                <div class="nav_close" id="nav-close">
+                    <!-- ! Icon "silang" dari website https://remixicon.com/, lalu search "close" -->
+                    <i class="ri-close-line"></i>
+                </div>
+            </div>
+
+            <!-- TODO ======================= TOGGLE BUTTON ======================= -->
+            <div class="nav_toggle" id="nav-toggle">
+                <!-- ! Icon "menu" dari website https://remixicon.com/, lalu search "menu" -->
+                <i class="ri-menu-line"></i>
+            </div>
+        </nav>
     </header>
-
 
     <!-- TODO ======================= MAIN ======================= -->
     <main class="main">
