--- a/index.html
+++ b/index.html
@@ -65,7 +65,53 @@
     <main class="main">
         <!-- TODO ==================== HOME ==================== -->
         <section class="home section" id="home">
+            <div class="shape shape_big"></div>
+            <div class="shape shape_small"></div>
+            <div class="home_container container grid">
+                <div class="home_data">
+                    <h1 class="home_title">
+                        Choose The Best Car
+                    </h1>
+                    <h2 class="home_subtitle">
+                        Porsche Mission E
+                    </h2>
+                    <h3 class="home_elec">
+                        <!-- ! Icon "listrik" dari website https://remixicon.com/, lalu search "flashlight" -->
+                        <i class="ri-flashlight-fill"></i>
+                        Electric Car
+                    </h3>
+                </div>
+                <img src="assets/img/home.png" alt="home" class="home_img">
+                <div class="home_car">
+                    <div class="home_car-data">
+                        <div class="home_car-icon">
+                            <!-- ! Icon "suhu" dari website https://remixicon.com/, lalu search "temp-cold-line" -->
+                            <i class="ri-temp-cold-line"></i>
+                        </div>
+                        <h2 class="home_car-number">24°</h2>
+                        <h3 class="home_car-name">TEMPERATURE</h3>
+                    </div>
 
+                    <div class="home_car-data">
+                        <div class="home_car-icon">
+                            <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
+                            <i class="ri-dashboard-3-line"></i>
+                        </div>
+                        <h2 class="home_car-number">873</h2>
+                        <h3 class="home_car-name">MILEAGE</h3>
+                    </div>
+
+                    <div class="home_car-data">
+                        <div class="home_car-icon">
+                            <!-- ! Icon "listrik" dari website https://remixicon.com/, lalu search "flashlight" -->
+                            <i class="ri-flashlight-fill"></i>
+                        </div>
+                        <h2 class="home_car-number">94%</h2>
+                        <h3 class="home_car-name">BATTERY</h3>
+                    </div>
+                </div>
+                <a href="#" class="home_button">START</a>
+            </div>
         </section>
 
         <!-- TODO ==================== ABOUT ==================== -->
