--- a/index.html
+++ b/index.html
@@ -116,7 +116,28 @@
 
         <!-- TODO ==================== ABOUT ==================== -->
         <section class="about section" id="about">
+            <div class="about_container container grid">
+                <div class="about_group">
+                    <img src="assets/img/about.png" alt="about" class="about_img">
 
+                    <div class="about_card">
+                        <h3 class="about_card-title">2.500+</h3>
+                        <p class="about_card-description">
+                            Supercharges placed along popular routes
+                        </p>
+                    </div>
+                </div>
+                <div class="about_data">
+                    <h2 class="section_title about_title">
+                        Machines With <br> Future Techonlogy
+                    </h2>
+                    <p class="about_description">
+                        See the future with high-performance electric cars produced by renowned brands. They future
+                        futuristic builds and designs with new and innovative platforms that last a long time.
+                    </p>
+                    <a href="#" class="button">Know More</a>
+                </div>
+            </div>
         </section>
 
         <!-- TODO ==================== POPULAR ==================== -->
