--- a/index.html
+++ b/index.html
@@ -142,7 +142,162 @@
 
         <!-- TODO ==================== POPULAR ==================== -->
         <section class="popular section" id="popular">
+            <h2 class="section_title">
+                Choose Your Electric Car <br> Of The Porsche Brand
+            </h2>
+            <div class="popular_container container">
+                <div>
+                    <article class="popular_card">
+                        <div class="shape shape_smaller"></div>
 
+                        <h1 class="popular_title">Porsche</h1>
+                        <h3 class="popular_subtitle">Taycan</h3>
+                        <img src="assets/img/popular2.png" alt="popular2" class="popular_img">
+                        <div class="popular_data">
+                            <div class="popular_data-group">
+                                <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
+                                <i class="ri-dashboard-3-line"></i>
+                                3.7 Sec
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
+                                <i class="ri-funds-box-line"></i>
+                                356 Km/h
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
+                                <i class="ri-charging-pile-2-line"></i>
+                                Electric
+                            </div>
+                        </div>
+                        <h3 class="popular_price">IDR 1.7M</h3>
+                        <button class="button popular_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="popular_card">
+                        <div class="shape shape_smaller"></div>
+
+                        <h1 class="popular_title">Porsche</h1>
+                        <h3 class="popular_subtitle">Turbo S</h3>
+                        <img src="assets/img/popular1.png" alt="popular1" class="popular_img">
+                        <div class="popular_data">
+                            <div class="popular_data-group">
+                                <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
+                                <i class="ri-dashboard-3-line"></i>
+                                3.7 Sec
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
+                                <i class="ri-funds-box-line"></i>
+                                356 Km/h
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
+                                <i class="ri-charging-pile-2-line"></i>
+                                Electric
+                            </div>
+                        </div>
+                        <h3 class="popular_price">IDR 2.6M</h3>
+                        <button class="button popular_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="popular_card">
+                        <div class="shape shape_smaller"></div>
+
+                        <h1 class="popular_title">Porsche</h1>
+                        <h3 class="popular_subtitle">Turbo S Cross</h3>
+                        <img src="assets/img/popular3.png" alt="popular3" class="popular_img">
+                        <div class="popular_data">
+                            <div class="popular_data-group">
+                                <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
+                                <i class="ri-dashboard-3-line"></i>
+                                3.7 Sec
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
+                                <i class="ri-funds-box-line"></i>
+                                356 Km/h
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
+                                <i class="ri-charging-pile-2-line"></i>
+                                Electric
+                            </div>
+                        </div>
+                        <h3 class="popular_price">IDR 2.3M</h3>
+                        <button class="button popular_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="popular_card">
+                        <div class="shape shape_smaller"></div>
+
+                        <h1 class="popular_title">Porsche</h1>
+                        <h3 class="popular_subtitle">Boxster 718</h3>
+                        <img src="assets/img/popular4.png" alt="popular4" class="popular_img">
+                        <div class="popular_data">
+                            <div class="popular_data-group">
+                                <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
+                                <i class="ri-dashboard-3-line"></i>
+                                3.7 Sec
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
+                                <i class="ri-funds-box-line"></i>
+                                356 Km/h
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
+                                <i class="ri-charging-pile-2-line"></i>
+                                Electric
+                            </div>
+                        </div>
+                        <h3 class="popular_price">IDR 1.9M</h3>
+                        <button class="button popular_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="popular_card">
+                        <div class="shape shape_smaller"></div>
+
+                        <h1 class="popular_title">Porsche</h1>
+                        <h3 class="popular_subtitle">Cayman</h3>
+                        <img src="assets/img/popular5.png" alt="popular5" class="popular_img">
+                        <div class="popular_data">
+                            <div class="popular_data-group">
+                                <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
+                                <i class="ri-dashboard-3-line"></i>
+                                3.7 Sec
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
+                                <i class="ri-funds-box-line"></i>
+                                356 Km/h
+                            </div>
+                            <div class="popular_data-group">
+                                <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
+                                <i class="ri-charging-pile-2-line"></i>
+                                Electric
+                            </div>
+                        </div>
+                        <h3 class="popular_price">IDR 1.9M</h3>
+                        <button class="button popular_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+                </div>
+            </div>
         </section>
 
         <!-- TODO ==================== FEATURES ==================== -->
