--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- TODO ======================= SWIPER CSS ======================= -->
     <!-- ! Swiper dari website https://swiperjs.com/get-started#use-swiper-from-cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
     <!-- TODO ======================= CSS ======================= -->
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -145,9 +146,9 @@
             <h2 class="section_title">
                 Choose Your Electric Car <br> Of The Porsche Brand
             </h2>
-            <div class="popular_container container">
-                <div>
-                    <article class="popular_card">
+            <div class="popular_container container swiper">
+                <div class="swiper-wrapper">
+                    <article class="popular_card swiper-slide">
                         <div class="shape shape_smaller"></div>
 
                         <h1 class="popular_title">Porsche</h1>
@@ -156,18 +157,15 @@
                         <div class="popular_data">
                             <div class="popular_data-group">
                                 <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
-                                <i class="ri-dashboard-3-line"></i>
-                                3.7 Sec
+                                <i class="ri-dashboard-3-line"></i>3.7 Sec
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
-                                <i class="ri-funds-box-line"></i>
-                                356 Km/h
+                                <i class="ri-funds-box-line"></i>356 Km/h
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
-                                <i class="ri-charging-pile-2-line"></i>
-                                Electric
+                                <i class="ri-charging-pile-2-line"></i>Electric
                             </div>
                         </div>
                         <h3 class="popular_price">IDR 1.7M</h3>
@@ -177,7 +175,7 @@
                         </button>
                     </article>
 
-                    <article class="popular_card">
+                    <article class="popular_card swiper-slide">
                         <div class="shape shape_smaller"></div>
 
                         <h1 class="popular_title">Porsche</h1>
@@ -186,18 +184,15 @@
                         <div class="popular_data">
                             <div class="popular_data-group">
                                 <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
-                                <i class="ri-dashboard-3-line"></i>
-                                3.7 Sec
+                                <i class="ri-dashboard-3-line"></i>3.7 Sec
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
-                                <i class="ri-funds-box-line"></i>
-                                356 Km/h
+                                <i class="ri-funds-box-line"></i>356 Km/h
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
-                                <i class="ri-charging-pile-2-line"></i>
-                                Electric
+                                <i class="ri-charging-pile-2-line"></i>Electric
                             </div>
                         </div>
                         <h3 class="popular_price">IDR 2.6M</h3>
@@ -207,7 +202,7 @@
                         </button>
                     </article>
 
-                    <article class="popular_card">
+                    <article class="popular_card swiper-slide">
                         <div class="shape shape_smaller"></div>
 
                         <h1 class="popular_title">Porsche</h1>
@@ -216,18 +211,15 @@
                         <div class="popular_data">
                             <div class="popular_data-group">
                                 <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
-                                <i class="ri-dashboard-3-line"></i>
-                                3.7 Sec
+                                <i class="ri-dashboard-3-line"></i>3.7 Sec
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
-                                <i class="ri-funds-box-line"></i>
-                                356 Km/h
+                                <i class="ri-funds-box-line"></i>356 Km/h
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
-                                <i class="ri-charging-pile-2-line"></i>
-                                Electric
+                                <i class="ri-charging-pile-2-line"></i>Electric
                             </div>
                         </div>
                         <h3 class="popular_price">IDR 2.3M</h3>
@@ -237,7 +229,7 @@
                         </button>
                     </article>
 
-                    <article class="popular_card">
+                    <article class="popular_card swiper-slide">
                         <div class="shape shape_smaller"></div>
 
                         <h1 class="popular_title">Porsche</h1>
@@ -246,18 +238,15 @@
                         <div class="popular_data">
                             <div class="popular_data-group">
                                 <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
-                                <i class="ri-dashboard-3-line"></i>
-                                3.7 Sec
+                                <i class="ri-dashboard-3-line"></i>3.7 Sec
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
-                                <i class="ri-funds-box-line"></i>
-                                356 Km/h
+                                <i class="ri-funds-box-line"></i>356 Km/h
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
-                                <i class="ri-charging-pile-2-line"></i>
-                                Electric
+                                <i class="ri-charging-pile-2-line"></i>Electric
                             </div>
                         </div>
                         <h3 class="popular_price">IDR 1.9M</h3>
@@ -267,7 +256,7 @@
                         </button>
                     </article>
 
-                    <article class="popular_card">
+                    <article class="popular_card swiper-slide">
                         <div class="shape shape_smaller"></div>
 
                         <h1 class="popular_title">Porsche</h1>
@@ -276,18 +265,15 @@
                         <div class="popular_data">
                             <div class="popular_data-group">
                                 <!-- ! Icon "meteran" dari website https://remixicon.com/, lalu search "dashboard" -->
-                                <i class="ri-dashboard-3-line"></i>
-                                3.7 Sec
+                                <i class="ri-dashboard-3-line"></i>3.7 Sec
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "grafik naik" dari website https://remixicon.com/, lalu search "funds" -->
-                                <i class="ri-funds-box-line"></i>
-                                356 Km/h
+                                <i class="ri-funds-box-line"></i>356 Km/h
                             </div>
                             <div class="popular_data-group">
                                 <!-- ! Icon "baterai" dari website https://remixicon.com/, lalu search "charging" -->
-                                <i class="ri-charging-pile-2-line"></i>
-                                Electric
+                                <i class="ri-charging-pile-2-line"></i>Electric
                             </div>
                         </div>
                         <h3 class="popular_price">IDR 1.9M</h3>
@@ -297,6 +283,7 @@
                         </button>
                     </article>
                 </div>
+                <div class="swiper-pagination"></div>
             </div>
         </section>
 
@@ -332,7 +319,8 @@
     <script src=""></script>
 
     <!-- TODO ======================= SWIPER JS ======================= -->
-    <script src=""></script>
+    <!-- ! Swiper dari website https://swiperjs.com/get-started#use-swiper-from-cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- TODO ======================= MIXITUP JS ======================= -->
     <script src=""></script>
