--- a/index.html
+++ b/index.html
@@ -289,7 +289,29 @@
 
         <!-- TODO ==================== FEATURES ==================== -->
         <section class="features section">
+            <h2 class="section_title">
+                More Features
+            </h2>
+            <div class="features_container container grid">
+                <div class="features_group">
+                    <img src="assets/img/features.png" alt="features" class="features_img">
+                    <div class="features_card features_card-1">
+                        <h3 class="features_card-title">800v</h3>
+                        <p class="features_card-description">Turbo <br> Chargin</p>
+                    </div>
 
+                    <div class="features_card features_card-2">
+                        <h3 class="features_card-title">350</h3>
+                        <p class="features_card-description">Km <br> Range</p>
+                    </div>
+
+                    <div class="features_card features_card-3">
+                        <h3 class="features_card-title">480</h3>
+                        <p class="features_card-description">Km <br> Travel</p>
+                    </div>
+                </div>
+            </div>
+            <img src="assets/img/map.svg" alt="map" class="features_map">
         </section>
 
         <!-- TODO ==================== FEATURED ==================== -->
