--- a/index.html
+++ b/index.html
@@ -316,7 +316,94 @@
 
         <!-- TODO ==================== FEATURED ==================== -->
         <section class="featured section" id="featured">
+            <h2 class="section_title">
+                Featured Luxury Cars
+            </h2>
+            <div class="featured_container container">
+                <ul class="featured_filters">
+                    <li>
+                        <button class="featured_item active-featured" data-filter="all">
+                            <span>All</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="featured_item" data-filter=".porsche">
+                            <img src="assets/img/logo1.png" alt="logo1">
+                        </button>
+                    </li>
+                    <li>
+                        <button class="featured_item" data-filter=".audi">
+                            <img src="assets/img/logo2.png" alt="logo2">
+                        </button>
+                    </li>
+                    <li>
+                        <button class="featured_item" data-filter=".tesla">
+                            <img src="assets/img/logo3.png" alt="logo3">
+                        </button>
+                    </li>
+                </ul>
+                <div class="featured_content grid">
+                    <article class="featured_card mix tesla">
+                        <div class="shape shape_smaller"></div>
+                        <h1 class="featured_title">Tesla</h1>
+                        <h3 class="featured_subtitle">Model X</h3>
+                        <img src="assets/img/featured1.png" alt="featured1" class="featured_img">
+                        <h3 class="featured_price">IDR 1.4M</h3>
+                        <button class="button featured_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
 
+                    <article class="featured_card mix tesla">
+                        <div class="shape shape_smaller"></div>
+                        <h1 class="featured_title">Tesla</h1>
+                        <h3 class="featured_subtitle">Model 3</h3>
+                        <img src="assets/img/featured2.png" alt="featured2" class="featured_img">
+                        <h3 class="featured_price">IDR 1.1M</h3>
+                        <button class="button featured_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="featured_card mix audi">
+                        <div class="shape shape_smaller"></div>
+                        <h1 class="featured_title">Audi</h1>
+                        <h3 class="featured_subtitle">E-tron</h3>
+                        <img src="assets/img/featured3.png" alt="featured3" class="featured_img">
+                        <h3 class="featured_price">IDR 2.6M</h3>
+                        <button class="button featured_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="featured_card mix porsche">
+                        <div class="shape shape_smaller"></div>
+                        <h1 class="featured_title">Porsche</h1>
+                        <h3 class="featured_subtitle">Boxster 987</h3>
+                        <img src="assets/img/featured4.png" alt="featured4" class="featured_img">
+                        <h3 class="featured_price">IDR 1.9M</h3>
+                        <button class="button featured_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                    <article class="featured_card mix porsche">
+                        <div class="shape shape_smaller"></div>
+                        <h1 class="featured_title">Porsche</h1>
+                        <h3 class="featured_subtitle">Panamera</h3>
+                        <img src="assets/img/featured5.png" alt="featured5" class="featured_img">
+                        <h3 class="featured_price">IDR 1.9M</h3>
+                        <button class="button featured_button">
+                            <!-- ! Icon "tas belanja" dari website https://remixicon.com/, lalu search "shopping" -->
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+                </div>
+            </div>
         </section>
 
         <!-- TODO ==================== OFFER ==================== -->
@@ -345,7 +432,8 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- TODO ======================= MIXITUP JS ======================= -->
-    <script src=""></script>
+    <!-- ! MIXITUP dari website https://www.kunkalabs.com/mixitup/, lalu klik "download latest", kemudian masuk ke folder "dist", dan pilih "mixitup.min" -->
+    <script src="assets/js/mixitup.min.js"></script>
 
     <!-- TODO ======================= MAIN JS ======================= -->
     <script src="assets/js/main.js"></script>
