--- a/index.html
+++ b/index.html
@@ -408,7 +408,22 @@
 
         <!-- TODO ==================== OFFER ==================== -->
         <section class="offer section">
-
+            <div class="offer_container container grid">
+                <img src="assets/img/offer-bg.png" alt="offer-bg" class="offer_bg">
+                <div class="offer_data">
+                    <h2 class="section_title offer_title">
+                        Do You Want To Receive <br> Special Offers?
+                    </h2>
+                    <p class="offer_description">
+                        Be the first to receive all the information about our products and new cars by email by
+                        subscribing to our mailing list.
+                    </p>
+                    <a href="#" class="button">
+                        Subscribe Now
+                    </a>
+                </div>
+                <img src="assets/img/offer.png" alt="offer" class="offer_img">
+            </div>
         </section>
 
         <!-- TODO ==================== LOGOS ==================== -->
