--- a/index.html
+++ b/index.html
@@ -428,7 +428,31 @@
 
         <!-- TODO ==================== LOGOS ==================== -->
         <section class="logos section">
+            <div class="logos_container container grid">
+                <div class="logos_content">
+                    <img src="assets/img/logo1.png" alt="logo1" class="logos_img">
+                </div>
 
+                <div class="logos_content">
+                    <img src="assets/img/logo2.png" alt="logo2" class="logos_img">
+                </div>
+
+                <div class="logos_content">
+                    <img src="assets/img/logo3.png" alt="logo3" class="logos_img">
+                </div>
+
+                <div class="logos_content">
+                    <img src="assets/img/logo4.png" alt="logo4" class="logos_img">
+                </div>
+
+                <div class="logos_content">
+                    <img src="assets/img/logo5.png" alt="logo5" class="logos_img">
+                </div>
+
+                <div class="logos_content">
+                    <img src="assets/img/logo6.png" alt="logo6" class="logos_img">
+                </div>
+            </div>
         </section>
     </main>
 
