--- a/index.html
+++ b/index.html
@@ -458,7 +458,84 @@
 
     <!-- TODO ======================= FOOTER ======================= -->
     <footer class="footer section">
+        <div class="shape shape_big"></div>
+        <div class="shape shape_small"></div>
+        <div class="footer_container container grid">
+            <div class="footer_content">
+                <a href="#" class="footer_logo">
+                    <!-- ! Icon "setir mobil" dari website https://remixicon.com/, lalu search "steering" -->
+                    <i class="ri-steering-line"></i>EVolution.
+                </a>
+                <p class="footer_description">
+                    We offer the best electric cars of <br>
+                    the most recognized brands in <br>
+                    the world.
+                </p>
+            </div>
 
+            <div class="footer_content">
+                <h3 class="footer_title">
+                    Company
+                </h3>
+                <ul class="footer_links">
+                    <li>
+                        <a href="#" class="footer_link">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer_link">Cars</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer_link">History</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer_link">Shop</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer_content">
+                <h3 class="footer_title">
+                    Information
+                </h3>
+                <ul class="footer_links">
+                    <li>
+                        <a href="#" class="footer_link">Request a quote</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer_link">Find a dealer</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer_link">Contact us</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer_link">Services</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer_content">
+                <h3 class="footer_title">
+                    Follow Us
+                </h3>
+                <ul class="footer_social">
+                    <a href="https://www.facebook.com/" target="_blank" class="footer_social-link">
+                        <!-- ! Icon "facebook" dari website https://remixicon.com/, lalu search "facebook" -->
+                        <i class="ri-facebook-fill"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="footer_social-link">
+                        <!-- ! Icon "instagram" dari website https://remixicon.com/, lalu search "instagram" -->
+                        <i class="ri-instagram-line"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank" class="footer_social-link">
+                        <!-- ! Icon "twitter" dari website https://remixicon.com/, lalu search "twitter" -->
+                        <i class="ri-twitter-line"></i>
+                    </a>
+                </ul>
+            </div>
+        </div>
+        <!-- ? Copyright license -->
+        <span class="footer_copy">
+            &#169; MiKe. All right reserved
+        </span>
     </footer>
 
     <!-- TODO ======================= SCROLL UP ======================= -->
